<resources>
    <string name="app_name">FreeLancerAndroid</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="title_activity_packages_sreen">PackagesSreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_package_item">Uj csomag feladasa</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="new_transport_item">Uj szallitas</string>
    <string name="start_navigation">Start navigation</string>
    <string name="no_nav_data">Navigational data will only appear one day before the given transfer date</string>
    <string name="no_package_data">Pickup and delivery times will appear one day before transfer date</string>
    <string name="no_packages">No packages to deliver</string>
    <string name="show_in_map">Show in map</string>
    <string name="Insurance">Rendelkezem biztosítással</string>
    <string name="logout_yes">Igen</string>
    <string name="logout_no">Nem</string>
    <string name="starttimemassage">Indulás idópontja (óra,perc):</string>
    <string name="password_again">Password again</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="packages">Packages</string>
    <string name="transport">Transport</string>
    <string name="vehicles">Vehicles</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="logoutmessage">Biztos ki szeretne lépni?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_new_account">Register new account</string>
    <string name="novehicle">Jelenleg meg nincs felveve jarmuve...</string>
    <string name="width">width</string>
    <string name="height">height</string>
    <string name="length">length</string>
    <string name="notransport">Jelenleg nincs aktiv szallitasa...</string>
    <string name="back">Back</string>
    <string name="waiting">WAITING</string>
    <string name="in_car">IN CAR</string>
    <string name="delivered">DELIVERED</string>
    <string name="show_map">SHOW IN MAP</string>
    <string name="nopackage">Jelenleg nincs csomagja...</string>
    <string name="packname">Csomag neve:</string>
    <string name="pack_size">Csomag merete:</string>
    <string name="deadline">Kezbesitesi hatarido:</string>
    <string name="packstatus">Csomag statusza:</string>
    <string name="city">Varos:</string>
    <string name="packvalue">Csomag erteke:</string>
    <string name="packweight">Csomag sulya:</string>
    <string name="maxweight">Maximalis suly</string>
    <string name="trucklength">Hossza</string>
    <string name="truckheight">Magassaga</string>
    <string name="truckwidth">Szelessege</string>
    <string name="truckname">A jarmu neve</string>
    <string name="minute">perc</string>
    <string name="hour">óra</string>
    <string name="honnan">Honnan:</string>
    <string name="choosevehicle">Kerem valasszon jarmuvet:</string>
    <string name="choosecity">Kerem valasszon varost:</string>
    <string name="choosepacksize">Valassza ki a csomag meretet:</string>
    <string name="pack_name">Csomag neve</string>
    <string name="pack_value">Csomag becsült értéke</string>
    <string name="pack_weigth">Csomag súlya (kg)</string>
    <string name="destinationaddress">Cel cim</string>
    <string name="deadine">Kezbesitesi hatarido</string>
    <string name="forgottmessage">Adja meg az email címét és hamarosan kiküldjük az új jelszavát!</string>
    <string name="send">Send</string>

    <string-array name="city_names">
        <item>Budapest</item>
        <item>Debrecen</item>
        <item>Miskolc</item>
    </string-array>

    <string-array name="package_sizes">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
</resources>