<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="300dp"
    android:minWidth="400dp"
    android:weightSum="20">

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:id="@+id/dpTrasportDate"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choosecity"
            android:layout_weight="6"/>

        <Spinner
            android:id="@+id/spinnerTransportCity"
            android:layout_weight="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"

        android:visibility="gone"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/choosevehicle" />

        <Spinner
            android:id="@+id/spinnerVehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </LinearLayout>

    <EditText
        android:id="@+id/etStartFromAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:hint="@string/honnan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/etStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/starttimemassage" />

        <EditText
            android:id="@+id/etHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType= "number"
            android:hint="@string/hour" />

        <EditText
            android:id="@+id/etMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType= "number"
            android:hint="@string/minute" />
    </LinearLayout>



</LinearLayout>